# sstg_nav

./: .gitignore  PERCEPTION_FIXES.md  PHASE_4_PROGRESS_REPORT.md  PROJECT_PROGRESS.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  SSTG-Nav-Plan.md  SSTG_User_Guide.md  WORKSPACE_MIGRATION_SUMMARY.md  verify_perception.py
project_test/: .gitignore  README.md  TESTING.md  diagnose_nlp_planning.py  init_test_map.py  integration_test_report.md  run_test.sh  run_tests.sh  start_nodes.sh  test_system_integration.py
sstg_nav_ws/: INSTALLATION.md  README.md  check_environment.sh
sstg_nav_ws/src/sstg_interaction_manager/: setup.py
sstg_nav_ws/src/sstg_map_manager/: MANIFEST.in  package.xml  setup.cfg  setup.py  test_map_manager.py
sstg_nav_ws/src/sstg_map_manager/config/: map_config.yaml
sstg_nav_ws/src/sstg_map_manager/doc/: QUICK_START.md
sstg_nav_ws/src/sstg_map_manager/launch/: map_manager.launch.py
sstg_nav_ws/src/sstg_map_manager/sstg_map_manager/: topological_node.py
sstg_nav_ws/src/sstg_msgs/: CMakeLists.txt
sstg_nav_ws/src/sstg_msgs/msg/: GoalTraceEvent.msg  SemanticData.msg  TaskStatus.msg
sstg_nav_ws/src/sstg_msgs/srv/: CaptureImage.srv  GetNodePose.srv  ProcessNLPQuery.srv  SaveRrtSession.srv
sstg_nav_ws/src/sstg_navigation_executor/docs/: EXECUTOR_QuickRef.md  MODULE_GUIDE.md
sstg_nav_ws/src/sstg_navigation_executor/launch/: executor.launch.py
sstg_nav_ws/src/sstg_navigation_executor/sstg_navigation_executor/: __init__.py  nav2_client.py
sstg_nav_ws/src/sstg_navigation_executor/test/: test_navigation_executor.py
sstg_nav_ws/src/sstg_navigation_planner/doc/: MODULE_GUIDE.md
sstg_nav_ws/src/sstg_navigation_planner/sstg_navigation_planner/: __init__.py
sstg_nav_ws/src/sstg_nlp_interface/doc/: MODULE_GUIDE.md  NLP_QuickRef.md
sstg_nav_ws/src/sstg_nlp_interface/sstg_nlp_interface/: __init__.py  multimodal_input.py
sstg_nav_ws/src/sstg_perception/: package.xml
sstg_nav_ws/src/sstg_perception/doc/: DEBUG_SUMMARY.md  JUPYTER_USAGE.md  MODULE_GUIDE.md  PERCEPTION_QuickRef.md
sstg_nav_ws/src/sstg_perception/scripts/: README.md  test_perception_services.sh
sstg_nav_ws/src/sstg_perception/sstg_perception/: perception_node.py  semantic_extractor.py
sstg_nav_ws/src/sstg_rrt_explorer/: CMakeLists.txt  package.xml
sstg_nav_ws/src/sstg_rrt_explorer/include/: functions.h
sstg_nav_ws/src/sstg_rrt_explorer/launch/: rrt_exploration_ros2.launch.py  trace_replay.launch.py
sstg_nav_ws/src/sstg_rrt_explorer/param/common/: nav2_params.yaml
sstg_nav_ws/src/sstg_rrt_explorer/rviz/: rrt_map.rviz  rrt_ros2.rviz
sstg_nav_ws/src/sstg_rrt_explorer/scripts/: assigner_ros2.py  filter_ros2.py  frontier_opencv_detector_ros2.py  functions_ros2.py  getfrontier_ros2.py  rrt_trace_manager.py  scan_dilute.py  tf_relay.py  topic_relay.py  trace_replay.py
sstg_nav_ws/src/sstg_rrt_explorer/src/: functions.cpp  global_rrt_detector_ros2.cpp  local_rrt_detector_ros2.cpp
sttg_nav_ws/: INSTALLATION.md  README.md  check_environment.sh
sttg_nav_ws/src/sstg_interaction_manager/docs/: INTERACTION_QuickRef.md  MODULE_GUIDE.md
sttg_nav_ws/src/sstg_interaction_manager/sstg_interaction_manager/: interaction_manager_node.py
sttg_nav_ws/src/sstg_interaction_manager/test/: test_interaction_manager.py
sttg_nav_ws/src/sstg_map_manager/doc/: MODULE_GUIDE.md
sttg_nav_ws/src/sstg_map_manager/sstg_map_manager/: map_manager_node.py  map_webui.py  topological_map.py
sttg_nav_ws/src/sstg_msgs/msg/: Command.msg  NavigationFeedback.msg  NavigationPlan.msg  SemanticObject.msg
sttg_nav_ws/src/sstg_msgs/srv/: AnnotateSemantic.srv  ExecuteNavigation.srv  PlanNavigation.srv  QuerySemantic.srv
sttg_nav_ws/src/sstg_navigation_executor/: package.xml  setup.cfg  setup.py
sttg_nav_ws/src/sstg_navigation_executor/docs/: EXECUTOR_QuickRef.md  MODULE_GUIDE.md
sttg_nav_ws/src/sstg_navigation_executor/sstg_navigation_executor/: feedback_handler.py  navigation_monitor.py
sttg_nav_ws/src/sstg_navigation_planner/: package.xml  setup.cfg
sttg_nav_ws/src/sstg_navigation_planner/doc/: MODULE_GUIDE.md  PLANNER_QuickRef.md
sttg_nav_ws/src/sstg_navigation_planner/sstg_navigation_planner/: navigation_planner.py  planning_node.py  semantic_matcher.py
sttg_nav_ws/src/sstg_navigation_planner/test/: test_navigation_planner.py
sttg_nav_ws/src/sstg_nlp_interface/: package.xml  setup.cfg  setup.py
sttg_nav_ws/src/sstg_nlp_interface/doc/: NLP_QuickRef.md
sttg_nav_ws/src/sstg_nlp_interface/sstg_nlp_interface/: nlp_node.py  query_builder.py  text_processor.py  vlm_client.py
sttg_nav_ws/src/sstg_nlp_interface/test/: test_nlp_interface.py
sttg_nav_ws/src/sstg_perception/: setup.cfg  setup.py
sttg_nav_ws/src/sstg_perception/config/: perception_config.yaml
sttg_nav_ws/src/sstg_perception/doc/: DEBUG_SUMMARY.md  JUPYTER_USAGE.md  README.md
sttg_nav_ws/src/sstg_perception/launch/: perception.launch.py
sttg_nav_ws/src/sstg_perception/scripts/: test_perception_services.sh  test_system_full.sh
sttg_nav_ws/src/sstg_perception/sstg_perception/: __init__.py  camera_subscriber.py  vlm_client.py
sttg_nav_ws/src/sstg_perception/test/: test_camera_subscriber.py
yahboomcar_ws/: README.md
yahboomcar_ws/src/sstg_interaction_manager/: package.xml  setup.cfg
yahboomcar_ws/src/sstg_interaction_manager/sstg_interaction_manager/: interaction_manager_node.py
yahboomcar_ws/src/sstg_msgs/: CMakeLists.txt  package.xml
yahboomcar_ws/src/sstg_msgs/msg/: SemanticAnnotation.msg
yahboomcar_ws/src/sstg_msgs/srv/: AnnotateSemantic.srv  CreateNode.srv  UpdateSemantic.srv
yahboomcar_ws/src/sstg_navigation_executor/sstg_navigation_executor/: executor_node.py
yahboomcar_ws/src/sstg_navigation_planner/: setup.py
yahboomcar_ws/src/sstg_navigation_planner/sstg_navigation_planner/: candidate_generator.py  planning_node.py  semantic_matcher.py
yahboomcar_ws/src/sstg_perception/doc/: MODULE_GUIDE.md  PERCEPTION_QuickRef.md
yahboomcar_ws/src/sstg_perception/launch/: perception.launch.py
yahboomcar_ws/src/yahboomcar_KCFTracker/: CMakeLists.txt
yahboomcar_ws/src/yahboomcar_rviz/: setup.py
(+35 files in other folders)
