<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sstg_navigation_executor</name>
  <version>0.1.0</version>
  <description>Navigation Execution Module for SSTG System - Nav2 Integration</description>
  <maintainer email="Daojie.PENG@qq.com">daojie</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>sstg_msgs</build_depend>
  <build_depend>nav2_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf_transformations</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sstg_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf_transformations</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
